<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/punktemax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end|top"
            android:layout_row="0"
            android:text="@string/punktemax" />

        <TextView
            android:id="@+id/punkteabz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end|top"
            android:layout_row="1"
            android:text="@string/punkteabzug" />

        <TextView
            android:id="@+id/summe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end|top"
            android:layout_row="2"
            android:text="@string/punktesumme"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/punkteabzvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start|top"
            android:layout_row="1"
            android:text="500" />

        <TextView
            android:id="@+id/punktemaxvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:text="20" />

        <TextView
            android:id="@+id/punktesumvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start|top"
            android:layout_row="2"
            android:text="480"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </GridLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pointsokay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/okay" />
    </LinearLayout>

</LinearLayout>